<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/self_adjust_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ucsd.hearingaid.osp_r01.MainActivity">

    <TextView
        style="?android:textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/app_name"
        android:textStyle="bold" />

    <TextView
        style="?android:textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/sub_title" />
    <TextView
        android:id="@+id/resercher_initials_txt"
        style="?android:textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_small_margin"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/researcher_initials_txt" />
    <TextView
        android:id="@+id/user_initials_txt"
        style="?android:textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_small_margin"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/user_initials_txt" />

    <Button
        android:id="@+id/settings_page_btn"
        android:layout_width="wrap_content"
        style="?android:textAppearanceLarge"
        android:layout_margin="@dimen/activity_small_margin"
        android:layout_height="wrap_content"
        android:text="@string/param_settings"/>
    <Button
        android:id="@+id/researcher_pages_btn"
        android:layout_width="wrap_content"
        style="?android:textAppearanceLarge"
        android:layout_margin="@dimen/activity_small_margin"
        android:layout_height="wrap_content"
        android:text="@string/researcher_pages"/>

</LinearLayout>
</ScrollView>