<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/self_adjust_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:focusableInTouchMode="true"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="edu.ucsd.hearingaid.osp_r01.LoginActivity">

        <TextView
            style="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textStyle="bold" />

        <TextView
            style="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/sub_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:fontFamily="sans-serif"
                android:text="@string/select_a_connection" />

            <Spinner
                android:id="@+id/listener_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:fontFamily="sans-serif"
                android:text="@string/ip_address" />
            <EditText
                android:id="@+id/ip_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:ems="10"
                android:hint="@string/enter_ip"
                android:imeOptions="actionNext"
                android:inputType="textUri"
                android:nextFocusDown="@+id/researcher_initials" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">
        <TextView
            style="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif"
            android:text="@string/researcher_initials_txt" />
        <EditText
            android:id="@+id/researcher_initials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:ems="10"
            android:hint="@string/researcher_initials"
            android:imeOptions="actionDone"
            android:nextFocusDown="@+id/user_initials"
            android:maxLines="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:fontFamily="sans-serif"
                android:text="@string/user_initials_txt" />
            <EditText
                android:id="@+id/user_initials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                android:ems="10"
                android:hint="@string/user_initials"
                android:imeOptions="actionDone"
                android:maxLines="1" />
        </LinearLayout>

            <Button
                style="?android:textAppearanceLarge"
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login" />
    </LinearLayout>
</ScrollView>