<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/number_picker_title"
        style="?android:textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/number_picker_title" />

    <NumberPicker
        android:id="@+id/number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:descendantFocusability="blocksDescendants" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/dialog_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            style="?android:textAppearanceLarge"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/dialog_ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:textAppearanceLarge"
            android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>